--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 HANE
             </h1>
             <div class="menuBar ">
-                <a href="index.html">Kurumsal</a>
-                <a href="experience.html">Menü</a>
-                <a href="projects.html">Şehirler</a>
-                <a href="contact.html">XCafe</a>
+                <a href="">Kurumsal</a>
+                <a href="">Menü</a>
+                <a href="">Şehirler</a>
+                <a href="">XCafe</a>
                 <a href="">Medya</a>
                 <a href="">Franckhlang</a>
                 <a href="">İletişim</a>
@@ -48,9 +48,7 @@
             </div>
         </div>
 
-        <div
-        class="boxContainer"
-            >
+        <div class="boxContainer">
             <!-- yan yana 3 tane kutu olacak -->
             <div class="box1"
                 style="background-color: #f1f1f1; padding: 20px;  width: 33%; height: 100%; position:relative; border-radius: 10px;">
