--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
                     <li>Kahvaltı</li>
                     <li>Atıştırmalık</li>
                     <li>Tatlı</li>
-                    <li>Soğuk İçecekler</li>
+                    <li> <strong
+                        >
+                            Sıcak İçecekler</strong>
+                        Kahve</li>
+                    </strong>
+                    Soğuk İçecekler</li>
                     <ol>
                         <li>Çay...li
                     </ol>
